tests/07-invalid-attr-value-type.stderr
error: expected `default(value = "...")`
 --> $DIR/07-invalid-attr-value-type.rs:5:15
  |
5 |     #[default(value = 10)]
  |               ^^^^^^^^^^
